--- a/src/Page2.css
+++ b/src/Page2.css
@@ -63,16 +63,33 @@
 .button {
   float: right;
   font-size: 20px;
-  opacity: 100%;
-  color: #ffffff;
+  opacity: 100%; 
+  color:#FFFFFF;
   top: 900px;
   left: 500px;
-  width: 100px;
-  height: 50px;
+  width: 145px;
+  height: 56px;
   background: #ff8000 0% 0% no-repeat padding-box;
-  box-shadow: 0px 0px 12px #0000000f;
+  border: 0px solid white;
   border-radius: 6px;
   opacity: 1;
+  box-shadow: 0px 0px 12px #0000000F;
+}
+.button1 {
+  float: right;
+  font-size: 20px;
+  opacity: 100%; 
+  color:#48B0FF;
+  top: 900px;
+  left: 500px;
+  width: 145px;
+  height: 56px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 6px;
+  border: 1px solid #48B0FF;
+  opacity: 1;
+  margin-left:16px;
+  box-shadow: 0px 0px 12px #0000000F;
 }
 .time
 {
@@ -86,7 +103,7 @@
 }
 
 .timeI{
-  background: #F6F6F6 0% 0% no-repeat padding-box;
+background: #F6F6F6 0% 0% no-repeat padding-box;
 border: 1px solid #B2B2B2;
 border-radius: 8px;
 opacity: 1;
@@ -110,16 +127,27 @@ height: 56px;
    left: "599px";
   
 }
-#select{
-  width:"100px";
-  height: "56px";
-  border-Radius: '8px' ;
-  margin-Top:"13px";
+#leftside
+{
+  width: 600px;
 }
-#selectleft{
-  margin-left:205px;
-  width:"100px";
-  height: "56px";
-  border-Radius: '8px' ;
-  
+#buttontime
+{
+  background-color: transparent;
+  border: 0px solid white;
+  color: #0078D4;
+  width:37px;
+  height:37px;
+}
+#addtime
+{
+  background-color: transparent;
+  border: 0px solid white;
+  color:#0078D4;
+}
+#add
+{
+  width: 114px;
+  height: 27px;
+  font-size:22px;
 }
